--- a/css/button.css
+++ b/css/button.css
@@ -35,6 +35,11 @@
     border: none;
 }
 
+.non-style-link:link, .non-style-link:visited, .non-style-link:hover, .non-style-link:active{
+    text-decoration: none;
+    color: rgb(43, 43, 43);
+    padding-right: 10px;
+}
 
 .btn-primary-soft:hover{
     background-color: var(--primarycolor) ;
@@ -46,11 +51,6 @@
 .btn-in-text{
     font-size: 15px;
     letter-spacing: 0.5px;
-}
-
-.non-style-link:link, .non-style-link:visited, .non-style-link:hover, .non-style-link:active{
-    text-decoration: none;
-    color: rgb(43, 43, 43);
 }
 
 .btn-label{
